[gd_scene load_steps=6 format=3 uid="uid://i6rn7y8dqid6"]

[ext_resource type="Script" path="res://Scenes/levels/MonkeyShooter.gd" id="1_c7o20"]
[ext_resource type="Texture2D" uid="uid://b6xryrgmcprhi" path="res://Assets/monkey shooter.png" id="2_av5nc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hrds1"]
size = Vector2(12, 10.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_do2gu"]
size = Vector2(12, 10.25)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8nhhq"]
radius = 106.0
height = 661.0

[node name="MonkeyShooter" type="CharacterBody2D"]
position = Vector2(432, 320)
scale = Vector2(4, 4)
collision_layer = 0
collision_mask = 3
script = ExtResource("1_c7o20")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.875)
shape = SubResource("RectangleShape2D_hrds1")

[node name="main" type="Sprite2D" parent="."]
texture = ExtResource("2_av5nc")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="barrel" type="Sprite2D" parent="."]
position = Vector2(0, 4)
texture = ExtResource("2_av5nc")
offset = Vector2(0, -4)
region_enabled = true
region_rect = Rect2(0, 16, 16, 16)

[node name="Marker2D" type="Marker2D" parent="barrel"]
position = Vector2(0, -4.5)

[node name="monkey" type="Sprite2D" parent="."]
texture = ExtResource("2_av5nc")
region_enabled = true
region_rect = Rect2(16, 0, 16, 16)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2.875)
shape = SubResource("RectangleShape2D_do2gu")

[node name="player_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_area"]
visible = false
shape = SubResource("CapsuleShape2D_8nhhq")
debug_color = Color(0, 0.6, 0.701961, 0)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="player_area" to="." method="_on_player_area_body_entered"]
[connection signal="body_exited" from="player_area" to="." method="_on_player_area_body_exited"]
